--- a/configs/cb0/config
+++ b/configs/cb0/config
@@ -34,6 +34,6 @@ color = "load74  fhot4"   #[50, 74] jiffies/sec => yellow
 color = "load89  fhot5"   #[75, 89) jiffies/sec => red
 color = "load99  fhot+"   #[90, *)  jiffies/sec => white hot!
 ifaces = "eth0"           #I boot with net.ifnames=0; Don't want loopback
-disks  = "sd[a-g][1-4]"   #Include SATA partitions in disk IO totals
-disks  = "nvme.*p[0-9]"   #Include NVMe partitions in disk IO totals
+disks  = "sd[a-g]"        #Include SATA partitions in disk IO totals
+disks  = "nvme[0-9]n1"    #Include NVMe partitions in disk IO totals
 Style = "disk = dbrd dbwr dbcn dnrd dnwr dncn"
