Add color %e/%E/%m for Michael.  Update RELEASE-NOTES.md, example config.
NOTE: `ppbT` was always colored, but (for less mental overhead) re-used
metric power-of-1000 banks with an unfortunate lack of discrimination in
the million parts/billion zone (mega) which is from 0.1% all the way up
to 100% CPU use, with then yellow being anything under 1000 CPU cores.
This is a consequence of "ppb" (or "ppm") being well known enough to not
explain, but also granular enough to cause this discrimination problem.

This new user-tunable color scheme allows more refined discrimination,
for a likely smaller dynamic number range of 6 OOM (0.1% -> 99_000 %cpu)
instead of 15 orders vs. unit -> 999T.  (Lower dynRange & discrimination
power roughly corresponds to universal tension between rounding&naming).

Memory% has typically even less dynamic range BUT people also tend to
care more about absolute amounts like "MiB" anyway.  So, for now we do
just one fmtPct color scheme, but it'd be easy to add a pctMem+0.05 if
anyone really wants that.

--- a/configs/cb0/config
+++ b/configs/cb0/config
@@ -8,6 +8,13 @@
 [include__LC_THEME] #..LC_THEME set.  Defs used by color, ageFmt, maybe style.
 
 [include__color]    #Decide test order,colors,sort order,dimension of kind tests
+color = "ratio+0.00 fhue0" # [   0,    1%) => purple    # Mild usage - blues
+color = "ratio+0.01 fhue1" # [   1,   10%) => blue
+color = "ratio+0.10 fhue2" # [  10,   50%) => cyan
+color = "ratio+0.50 fhue3" # [  50,  100%) => green     # More intense side of..
+color = "ratio+1.00 fhue4" # [ 100, 1000%) => yellow    #..the visible spectrum.
+color = "ratio+10.0 fhue5" # [1000,   inf) => red
+
 [include__ageFmt]   #Define various proc age/timestamp formats & colors
 [include__style]    #Define a bunch of styles/aliases for use with `-s`
 
