--- a/configs/kaminsky0/config
+++ b/configs/kaminsky0/config
@@ -4,17 +4,27 @@
 [display]
 [include__kind]     #Define our process typology
 
+#These next two are already done by ~/.config/cligen; Comment out to avoid dup
 [include__lightBG]  #Default to lightBG [fg][hue|HUE] defs but clobber if..
 [include__LC_THEME] #..LC_THEME set.  Defs used by color, ageFmt, maybe style.
 
 [include__color]    #Decide test order,colors,sort order,dimension of kind tests
+
+#Value-conditional fields besides paths
+[include__sizeColors]      # Also used in `scrollsy` below
+color = "ratio+0.00 FHUE0" # [   0,    1%) => dkPurple  # Mild usage - blues
+color = "ratio+0.01 fhue1" # [   1,   10%) => blue
+color = "ratio+0.10 fhue2" # [  10,   50%) => cyan 
+color = "ratio+0.50 fhue3" # [  50,  100%) => green     # More intense side of..
+color = "ratio+1.00 fhue4" # [ 100, 1000%) => yellow    #..the visible spectrum.
+color = "ratio+10.0 fhue5" # [1000,   inf) => red
+
 [include__ageFmt]   #Define various proc age/timestamp formats & colors
 [include__style]    #Define a bunch of styles/aliases for use with `-s`
 
 #Just some global default overrides.  All easily overridden on cmd line.
 #order  = toPpu     #Default: uid,tty,sess,ppid,pid
 format = "%p %t %J %c"  #Default; easily overridden on cmd-line or by style
-indent = 2
 
 #format = "%p %t %o %u %J %D%c"
 
@@ -24,17 +34,20 @@ indent = 2
 
 
 [scrollsy]
+#These next two are already done by ~/.config/cligen; Comment out to avoid dup
 [include__lightBG]  #Default to lightBG [fg][hue|HUE] defs but clobber if..
 [include__LC_THEME] #..LC_THEME set
 [include__sizeColors]
-color = "load4   fhue0"   #[0,  4]  jiffies/sec => purple
-color = "load14  fhue1"   #[5,  14] jiffies/sec => blue
-color = "load24  fhue2"   #[15, 24] jiffies/sec => cyan
-color = "load49  fhue3"   #[25, 49] jiffies/sec => green
-color = "load74  fhue4"   #[50, 74] jiffies/sec => yellow
-color = "load89  fhue5"   #[75, 89) jiffies/sec => red
-color = "load99  fhue+"   #[90, *)  jiffies/sec => white hot!
-ifaces = "eth[0-3]"       #I boot with net.ifnames=0; Don't want loopback
+color = "load4   fhue0"     # [0,  4]  jiffies/sec => purple
+color = "load14  fhue1"     # [5,  14] jiffies/sec => blue
+color = "load24  fhue2"     # [15, 24] jiffies/sec => cyan
+color = "load49  fhue3"     # [25, 49] jiffies/sec => green
+color = "load74  fhue4"     # [50, 74] jiffies/sec => yellow
+color = "load89  fhue5"     # [75, 89) jiffies/sec => red
+color = "load99  fhue+"     # [90, *)  jiffies/sec => white hot!
+
+# Probably want to change these for your local system; Can [include__MY_SETUP]
+ifaces = "eth[0-3]"          #I boot with net.ifnames=0; Don't want loopback
 disks  = "sd[a-g]"           #Include SATA whole devices in disk IO totals
 disks  = "nvme[0-9]n1p[0-9]" #Include NVMe partitions in disk IO totals
 Style = "disk = dbrd dbwr dbcn dnrd dnwr dncn"
